@@ -142,6 +142,13 @@ timeTest = False
 # Valid: True or False
 unionTest = False
 
+# Technique to test for UNION query SQL injection
+# The possible techniques are by NULL bruteforcing (bf) or by ORDER BY
+# clause (ob)
+# Valid: bf, ob
+# Default: bf
+uTech = bf
+
 # Use the UNION query (inband) SQL injection to retrieve the queries
 # output. No need to go blind.
 # Valid: True or False
